classDiagram
%% direction LR
    class User
    <<interface>> User
        User: + name
        User: + borrowed_books
        User: + get_user_info()
        User: + borrow_book()
        User: + return_book()

    class Member
        Member: + name
        Member: + borrowed_books
        Member: + return_book

    class Librarian
        Librarian: + name
        Librarian: + get_user_info()

    class Library
        Library: + name
        Library: + books
        Library: + Users

        Library: + add_book(book Book)
        Library: + register_user(user User)
        Library: + find_book(title str)

    class Book
        Book: + title
        Book: + author
        Book: - isbn
        Book: + is_available

    class LibraryService
        LibraryService: + Library
        LibraryService: + checkout_book(user User, title str)
        LibraryService: + return_book(user User, title str)
        LibraryService: + Library


    Member ..> User

    Librarian ..> User

    User ..> Book
    User ..o Library

    Book --o Library

    Library --o LibraryService

    LibraryService ..> User
    